Tap and press gesture detector using suspending pointer input
Fixes: 171515638
Fixes: 171517687

Relnote: "Gesture detector for tap, double-tap, long press,
and press indication were added using the new suspending pointer
input. A few utilities were added as well, making it easier
for developers to write their own gesture detectors."

Test: demo and new tests
Change-Id: I0080776a5672f63ceb8f4ae0a753d5f4debdc2e8

--- a/foundation/foundation/build.gradle
+++ b/foundation/foundation/build.gradle
@@ -55,6 +55,7 @@ dependencies {
         testImplementation(ANDROIDX_TEST_RUNNER)
         testImplementation(JUNIT)
         testImplementation(TRUTH)
+        testImplementation(KOTLIN_COROUTINES_TEST)
 
         androidTestImplementation project(":compose:test-utils")
         androidTestImplementation project(':ui:ui-test')
@@ -107,6 +108,10 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 implementation(ANDROIDX_TEST_RULES)
                 implementation(ANDROIDX_TEST_RUNNER)
                 implementation(JUNIT)
+            }
+
+            commonTest.dependencies {
+                implementation(KOTLIN_COROUTINES_TEST)
             }
 
             androidAndroidTest.dependencies {
