Add .idea to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-templates/multiplatform-template/.idea/**
-templates/desktop-template/.idea/**
+.idea
