--- a/examples/imageviewer/.gitignore
+++ b/examples/imageviewer/.gitignore
@@ -1,3 +1,15 @@
-.DS_Store
+*.iml
 .gradle
-build
+/local.properties
+/.idea
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+build/
+/captures
+.externalNativeBuild
+.cxx
