--- a/examples/issues/.gitignore
+++ b/examples/issues/.gitignore
@@ -1,7 +1,15 @@
-/desktop/build
-/android/build
-/common/build
-/.gradle
+*.iml
+.gradle
+/local.properties
 /.idea
-
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
 .DS_Store
+build/
+/captures
+.externalNativeBuild
+.cxx
