Move foundation-text members to foundation
As a part of merging foundation-text to foundation, this CL moves members of f-text to the foundation and adjusts scripts accordingly

Bug: 171793665
Change-Id: Id3eb24adc68111232087cdb2a1d01132ddd49a64
Test: migrated as well
RelNote: "foundation:foundation-text apis moved to foundation:foundation. The package structure remained the same"

--- a/foundation/foundation/integration-tests/foundation-demos/build.gradle
+++ b/foundation/foundation/integration-tests/foundation-demos/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation project(":compose:runtime:runtime")
     implementation project(":compose:ui:ui")
     implementation project(":compose:ui:ui-text")
+    implementation project(":compose:ui:ui-text:ui-text-samples")
     implementation project(":paging:paging-compose:integration-tests:paging-demos")
 }
 
