--- a/foundation/foundation/build.gradle
+++ b/foundation/foundation/build.gradle
@@ -47,15 +47,20 @@ dependencies {
 
         implementation(KOTLIN_STDLIB_COMMON)
         implementation project(':compose:foundation:foundation-layout')
-        implementation project(':compose:foundation:foundation-text')
-        implementation project(':compose:ui:ui-text')
+        implementation project(":compose:ui:ui-text")
         implementation project(':compose:ui:ui-util')
+
 
         testImplementation(ANDROIDX_TEST_RULES)
         testImplementation(ANDROIDX_TEST_RUNNER)
         testImplementation(JUNIT)
         testImplementation(TRUTH)
         testImplementation(KOTLIN_COROUTINES_TEST)
+        testImplementation(MOCKITO_CORE)
+        testImplementation(KOTLIN_REFLECT)
+        testImplementation MOCKITO_KOTLIN, {
+            exclude group: 'org.mockito' // to keep control on the mockito version
+        }
 
         androidTestImplementation project(":compose:test-utils")
         androidTestImplementation project(":compose:ui:ui-test-font")
@@ -90,10 +95,9 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 api project(':compose:runtime:runtime')
                 api project(':compose:runtime:runtime-saved-instance-state')
                 api project(':compose:ui:ui')
+                implementation project(":compose:ui:ui-text")
+                implementation project(":compose:ui:ui-util")
                 implementation project(':compose:foundation:foundation-layout')
-                implementation project(':compose:foundation:foundation-text')
-                implementation project(':compose:ui:ui-text')
-                implementation project(':compose:ui:ui-util')
             }
             androidMain.dependencies {
                 api "androidx.annotation:annotation:1.1.0"
@@ -107,6 +111,12 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 implementation(ANDROIDX_TEST_RULES)
                 implementation(ANDROIDX_TEST_RUNNER)
                 implementation(JUNIT)
+                implementation(MOCKITO_CORE)
+                implementation(TRUTH)
+                implementation(KOTLIN_REFLECT)
+                implementation MOCKITO_KOTLIN, {
+                    exclude group: 'org.mockito' // to keep control on the mockito version
+                }
             }
 
             commonTest.dependencies {
@@ -137,6 +147,10 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 implementation(TRUTH)
                 implementation(JUNIT)
                 implementation(SKIKO_CURRENT_OS)
+                implementation(MOCKITO_CORE)
+                implementation MOCKITO_KOTLIN, {
+                    exclude group: 'org.mockito' // to keep control on the mockito version
+                }
             }
         }
     }
