--- a/ui/ui-test-junit4/build.gradle
+++ b/ui/ui-test-junit4/build.gradle
@@ -46,6 +46,7 @@ dependencies {
         implementation(ESPRESSO_CORE)
         implementation project(":compose:animation:animation")
         implementation project(":compose:foundation:foundation-text")
+        implementation project(":compose:foundation:foundation")
 
         testImplementation(TRUTH)
 
@@ -72,6 +73,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 api project(":compose:ui:ui-test")
                 implementation project(":compose:animation:animation")
                 implementation project(":compose:foundation:foundation-text")
+                implementation project(":compose:foundation:foundation")
 
                 implementation(KOTLIN_STDLIB_COMMON)
             }
