Initial ui lint checks
Adds a lint check to ensure that functions returning a Modifier do not return a subclass / implementation of Modifier.

Bug: b/172469237
Test: lintDebug
Change-Id: I644015997fa8aab8add59a6f3e9484254d3a54e7

--- a/ui/ui/build.gradle
+++ b/ui/ui/build.gradle
@@ -104,6 +104,8 @@ dependencies {
         androidTestImplementation project(":compose:ui:ui-test-font")
         androidTestImplementation project(":ui:ui-test")
         androidTestImplementation "androidx.recyclerview:recyclerview:1.1.0"
+
+        lintPublish project(":compose:ui:ui-lint")
     }
 }
 
