Initial runtime lint checks
Adds a lint check to check the naming of @Composable functions with / without return types.

Fixes / suppresses existing problems.

Bug: b/172469237
Test: lintDebug
Change-Id: I7e58ca66d74792cedb963cfd2c32eef180db4053

--- a/runtime/runtime/build.gradle
+++ b/runtime/runtime/build.gradle
@@ -59,6 +59,9 @@ dependencies {
         androidTestImplementation(ANDROIDX_TEST_RUNNER)
         androidTestImplementation(JUNIT)
         androidTestImplementation(TRUTH)
+
+        lintChecks project(":compose:runtime:runtime-lint")
+        lintPublish project(":compose:runtime:runtime-lint")
     }
 }
 
