Remove .test suffix from test manifest
Bug: N/A
Test: Existing tests pass
Change-Id: I2b6d03d7e093707e8f32d32d0a51b1e4ed37845e

--- a/ui/ui-tooling/src/androidTest/AndroidManifest.xml
+++ b/ui/ui-tooling/src/androidTest/AndroidManifest.xml
@@ -16,7 +16,7 @@
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="androidx.compose.ui.tooling.test">
+    package="androidx.compose.ui.tooling">
     <application
         android:debuggable="true"
         tools:ignore="HardcodedDebugMode"
