Remove deprecated ui-test module & stubs
Since the deprecations were already launched in the last release we can
now remove all the related stubs and deprecated APIs.

Bug: 171218089
Test: Pass
Relnote: "Remove old ui-test module and its stubs"
Change-Id: I3a7cbbe376d0542955983fb09afd2dc37be7647e

--- a/androidview/androidview/build.gradle
+++ b/androidview/androidview/build.gradle
@@ -38,7 +38,7 @@ dependencies {
 
     implementation project(":compose:runtime:runtime")
     implementation project(":compose:ui:ui")
-    implementation project(":ui:ui-test")
+    implementation project(":compose:ui:ui-test-junit4")
 
     testImplementation(ANDROIDX_TEST_RULES)
     testImplementation(ANDROIDX_TEST_RUNNER)
