--- a/foundation/foundation-layout/build.gradle
+++ b/foundation/foundation-layout/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 
         androidTestImplementation project(":compose:foundation:foundation")
         androidTestImplementation project(":compose:foundation:foundation-text")
-        androidTestImplementation project(":ui:ui-test")
+        androidTestImplementation project(":compose:ui:ui-test-junit4")
         androidTestImplementation(ANDROIDX_TEST_RULES)
         androidTestImplementation(ANDROIDX_TEST_RUNNER)
         androidTestImplementation(JUNIT)
@@ -98,7 +98,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
             androidAndroidTest.dependencies {
                 implementation project(":compose:foundation:foundation")
                 implementation project(":compose:foundation:foundation-text")
-                implementation project(":ui:ui-test")
+                implementation project(":compose:ui:ui-test-junit4")
 
                 implementation(ANDROIDX_TEST_RULES)
                 implementation(ANDROIDX_TEST_RUNNER)
