--- a/integration-tests/benchmark/build.gradle
+++ b/integration-tests/benchmark/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation project(":compose:foundation:foundation-layout")
     implementation project(":compose:integration-tests")
     implementation project(":compose:runtime:runtime")
-    implementation project(":ui:ui-test")
+    implementation project(":compose:ui:ui-test-junit4")
     implementation(KOTLIN_STDLIB)
     implementation(KOTLIN_REFLECT)
     implementation(ANDROIDX_TEST_RULES)
@@ -49,7 +49,6 @@ dependencies {
     androidTestImplementation project(":compose:runtime:runtime")
     androidTestImplementation project(":compose:test-utils")
     androidTestImplementation project(":compose:ui:ui")
-    androidTestImplementation project(":ui:ui-test")
     androidTestImplementation(ANDROIDX_TEST_EXT_JUNIT)
     androidTestImplementation(KOTLIN_TEST_COMMON)
     androidTestImplementation(ANDROIDX_TEST_RULES)
