--- a/integration-tests/build.gradle
+++ b/integration-tests/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation project(":compose:runtime:runtime")
     implementation project(":compose:test-utils")
     implementation project(":compose:ui:ui")
-    implementation project(":ui:ui-test")
+    implementation project(":compose:ui:ui-test-junit4")
 }
 
 androidx {
