--- a/runtime/runtime-livedata/build.gradle
+++ b/runtime/runtime-livedata/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     api "androidx.lifecycle:lifecycle-livedata:2.2.0"
     implementation project(":compose:ui:ui")
 
-    androidTestImplementation project(':ui:ui-test')
+    androidTestImplementation project(":compose:ui:ui-test-junit4")
     androidTestImplementation(ANDROIDX_TEST_RUNNER)
     androidTestImplementation(JUNIT)
     androidTestImplementation(TRUTH)
