--- a/runtime/runtime-saved-instance-state/build.gradle
+++ b/runtime/runtime-saved-instance-state/build.gradle
@@ -49,7 +49,7 @@ dependencies {
         testImplementation(ANDROIDX_TEST_RULES)
 
         androidTestImplementation project(':compose:ui:ui')
-        androidTestImplementation project(':ui:ui-test')
+        androidTestImplementation project(":compose:ui:ui-test-junit4")
         androidTestImplementation "androidx.fragment:fragment:1.3.0-alpha05"
         androidTestImplementation(ANDROIDX_TEST_UIAUTOMATOR)
         androidTestImplementation(ANDROIDX_TEST_CORE)
@@ -96,7 +96,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
 
             androidAndroidTest.dependencies {
                 implementation project(':compose:ui:ui')
-                implementation project(':ui:ui-test')
+                implementation project(":compose:ui:ui-test-junit4")
                 implementation "androidx.fragment:fragment:1.3.0-alpha05"
                 implementation(ANDROIDX_TEST_UIAUTOMATOR)
                 implementation(ANDROIDX_TEST_CORE)
