--- a/runtime/runtime/integration-tests/build.gradle
+++ b/runtime/runtime/integration-tests/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
     if(!AndroidXUiPlugin.isMultiplatformEnabled(project)) {
         androidTestImplementation(project(":compose:ui:ui"))
-        androidTestImplementation project(':ui:ui-test')
+        androidTestImplementation project(":compose:ui:ui-test-junit4")
         androidTestImplementation(project(":compose:runtime:runtime"))
 
         androidTestImplementation(JUNIT)
@@ -86,7 +86,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
             }
             androidAndroidTest.dependencies {
                 implementation(project(":compose:ui:ui"))
-                implementation project(':ui:ui-test')
+                implementation project(":compose:ui:ui-test-junit4")
                 implementation(ANDROIDX_TEST_EXT_JUNIT)
                 implementation(ANDROIDX_TEST_RULES)
                 implementation(ANDROIDX_TEST_RUNNER)
