--- a/gradle-plugins/compose/src/test/test-projects/application/jvmKotlinDsl/settings.gradle
+++ b/gradle-plugins/compose/src/test/test-projects/application/jvmKotlinDsl/settings.gradle
@@ -1,6 +1,6 @@
 pluginManagement {
     plugins {
-        id 'org.jetbrains.kotlin.jvm' version '1.4.10'
+        id 'org.jetbrains.kotlin.jvm' version 'KOTLIN_VERSION_PLACEHOLDER'
         id 'org.jetbrains.compose' version 'COMPOSE_VERSION_PLACEHOLDER'
     }
     repositories {
