--- a/ui/ui/build.gradle
+++ b/ui/ui/build.gradle
@@ -102,6 +102,7 @@ dependencies {
         androidTestImplementation project(":compose:test-utils")
         androidTestImplementation project(":compose:ui:ui-test-font")
         androidTestImplementation project(":compose:ui:ui-test-junit4")
+        androidTestImplementation project(":test-screenshot")
         androidTestImplementation "androidx.recyclerview:recyclerview:1.1.0"
 
         lintChecks project(":compose:ui:ui-lint")
@@ -195,6 +196,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 implementation project(":compose:test-utils")
                 implementation project(":compose:ui:ui-test-font")
                 implementation project(":compose:ui:ui-test-junit4")
+                implementation project(":test-screenshot")
                 implementation "androidx.recyclerview:recyclerview:1.1.0"
             }
 
@@ -248,6 +250,12 @@ android {
     buildTypes.all {
         consumerProguardFiles("proguard-rules.pro")
     }
+}
+
+// Screenshot tests related setup
+android {
+    sourceSets.androidTest.assets.srcDirs +=
+            project.rootDir.absolutePath + "/../../golden/compose/ui/ui"
 }
 
 if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
