Playground build fixes
Looks like some common demo utils was pulled out into a separate module.
Pulling in compose:compiler directly would pull in a bunch of other
stuff, so this change switches compose:integration-tests:demos:common to
use the artiactOrSnapshot helper instead

Test: ./gradlew bOS && cd navigation && ./gradlew navigation:navigation-compose:integration-tests:navigation-demos:build && cd ../paging && ./gradlew paging:paging-compose:integration-tests:paging-demos:runErrorProne
Change-Id: Ic37dc2ad826bd7ce6b103608b37a70d9408b0557

--- a/integration-tests/demos/common/build.gradle
+++ b/integration-tests/demos/common/build.gradle
@@ -26,11 +26,11 @@ plugins {
 }
 
 dependencies {
-    kotlinPlugin project(":compose:compiler:compiler")
+    kotlinPlugin projectOrArtifact(":compose:compiler:compiler")
     implementation(KOTLIN_STDLIB)
 
     api "androidx.activity:activity:1.2.0-alpha02"
-    implementation project(":compose:runtime:runtime")
+    implementation projectOrArtifact(":compose:runtime:runtime")
 }
 
 tasks.withType(KotlinCompile).configureEach {
