Implement packaging uber jar for current OS

--- a/gradle-plugins/compose/src/test/test-projects/application/jvm/build.gradle
+++ b/gradle-plugins/compose/src/test/test-projects/application/jvm/build.gradle
@@ -23,6 +23,7 @@ compose.desktop {
     application {
         mainClass = "MainKt"
         nativeDistributions {
+            version = "1.0"
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
         }
     }
