--- a/runtime/runtime-saveable/samples/build.gradle
+++ b/runtime/runtime-saveable/samples/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation project(":compose:foundation:foundation")
     implementation project(":compose:material:material")
     implementation project(":compose:runtime:runtime")
-    implementation project(":compose:runtime:runtime-saved-instance-state")
+    implementation project(":compose:runtime:runtime-saveable")
 }
 
 androidx {
