--- a/runtime/runtime-saveable/samples/src/main/AndroidManifest.xml
+++ b/runtime/runtime-saveable/samples/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   Copyright 2020 The Android Open Source Project
 
@@ -14,4 +13,5 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
-<manifest package="androidx.compose.runtime.savedinstancestate" />
+
+<manifest package="androidx.compose.runtime.saveable.samples" />
