Remove compose:runtime-dispatch
Move MonotonicFrameClock and BroadcastFrameClock to compose:runtime and
AndroidUiDispatcher/FrameClock to compose:ui.

Test: Existing tests moved to new homes
Relnote: "The compose:runtime-dispatch artifact is now deprecated.
MonotonicFrameClock can now be found in compose:runtime and
AndroidUiDispatcher can be found in compose:ui."

Change-Id: Ib5c36a427306eceac4b9b16b52a091e864e5b936

--- a/animation/animation-core/build.gradle
+++ b/animation/animation-core/build.gradle
@@ -42,10 +42,10 @@ dependencies {
         api "androidx.annotation:annotation:1.1.0"
 
         implementation project(":compose:runtime:runtime")
-        implementation project(":compose:runtime:runtime-dispatch")
         implementation project(":compose:ui:ui-unit")
         implementation project(":compose:ui:ui-util")
         implementation (KOTLIN_STDLIB)
+        api(KOTLIN_COROUTINES_CORE)
 
         testImplementation(ANDROIDX_TEST_RULES)
         testImplementation(ANDROIDX_TEST_RUNNER)
@@ -74,10 +74,10 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
         sourceSets {
             commonMain.dependencies {
                 implementation project(":compose:runtime:runtime")
-                implementation project(":compose:runtime:runtime-dispatch")
                 implementation project(":compose:ui:ui-unit")
                 implementation project(":compose:ui:ui-util")
                 implementation(KOTLIN_STDLIB_COMMON)
+                api(KOTLIN_COROUTINES_CORE)
             }
             androidMain.dependencies {
                 api "androidx.annotation:annotation:1.1.0"
