Replace latch with waitUntil in captureImage
After recent changes the draw latch is no longer reliable. I have also
removed the support to capture individual views as we don't have access
to TestContext in there. That API shoudln't be in our surface anyway.

Fix: 178475144
Test: No repro found
Relnote: "Removed view.captureToImage() without any replacement."
Change-Id: I7fcd2ef813209aa11ec459374fd9a671b1a9d63a

--- a/ui/ui-graphics/build.gradle
+++ b/ui/ui-graphics/build.gradle
@@ -51,6 +51,7 @@ if(!AndroidXUiPlugin.isMultiplatformEnabled(project)) {
 
         androidTestImplementation project(":compose:ui:ui-graphics:ui-graphics-samples")
         androidTestImplementation project(":compose:ui:ui-test-junit4")
+        androidTestImplementation project(":compose:test-utils")
         androidTestImplementation(ANDROIDX_TEST_RULES)
         androidTestImplementation(ANDROIDX_TEST_RUNNER)
         androidTestImplementation(ESPRESSO_CORE)
@@ -97,6 +98,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
             androidAndroidTest.dependencies {
                 implementation project(":compose:ui:ui-graphics:ui-graphics-samples")
                 implementation project(":compose:ui:ui-test-junit4")
+                implementation project(":compose:test-utils")
                 implementation(ANDROIDX_TEST_RULES)
                 implementation(ANDROIDX_TEST_RUNNER)
                 implementation(ESPRESSO_CORE)
