Restructure Macrobenchmark modules
Test: ./gradlew benchmark:benchmark-macro:cC benchmark:benchmark-macro-junit4:cC
Test: ANDROIDX_PROJECTS=FLAN ./gradlew tasks ; ANDROIDX_PROJECTS=COMPOSE ./gradlew tasks ; ANDROIDX_PROJECTS=MAIN ./gradlew tasks
Fixes: 178100609
Relnote: N/A

Remove perfetto module, as it's not something we currently want to
ship APIs for.

Split macro into junit4 specific, and other, similar to
benchmark. This will allow us to ship separate non-junit4 artifacts in
the future.

We are keeping macro separate from benchmark-common for multiple reasons:

* Comes with weighty perfetto trace processor dependency (several MB),
  which can affect deploy/iteration speed

* Macro modules should generally be separate from micro, as they will
  declare a dependency on a release app, and microbenchmarks will
  depend on code directly. This means having to compile any shared
  target code twice, if they're in the same module. Separate
  dependencies for macro/micro encourage good separation.

Note that these isolation benefits aren't felt by internal modules
currently, as multiple benchmarks import benchmark-macro-junit4 for
PerfettoRule. We'll need to figure out what to do with PerfettoRule
before we ship externally / commit to public APIs, possibly moving to
internal testutils.

Change-Id: I6fb5e369fd62ff971a1c78c7fa9a5feb1d73a511

--- a/integration-tests/macrobenchmark/build.gradle
+++ b/integration-tests/macrobenchmark/build.gradle
@@ -34,7 +34,7 @@ android.defaultConfig {
 
 dependencies {
     androidTestImplementation(project(":benchmark:benchmark-junit4"))
-    androidTestImplementation(project(":benchmark:benchmark-macro"))
+    androidTestImplementation(project(":benchmark:benchmark-macro-junit4"))
     androidTestImplementation(ANDROIDX_TEST_RULES)
     androidTestImplementation(ANDROIDX_TEST_EXT_JUNIT)
     androidTestImplementation(ANDROIDX_TEST_CORE)
