--- a/integration-tests/benchmark/build.gradle
+++ b/integration-tests/benchmark/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     kotlinPlugin project(":compose:compiler:compiler")
 
     implementation project(":benchmark:benchmark-junit4")
-    implementation project(":benchmark:benchmark-perfetto")
+    implementation project(":benchmark:benchmark-macro-junit4")
     implementation project(":compose:foundation:foundation-layout")
     implementation project(":compose:integration-tests")
     implementation project(":compose:runtime:runtime")
