Rebase Compose to Kotlin 1.4.30
Change-Id: I2bc519a9c92b8ef81c0001aa9a840a43bf817243

--- a/compiler/compiler-hosted/integration-tests/build.gradle
+++ b/compiler/compiler-hosted/integration-tests/build.gradle
@@ -73,7 +73,7 @@ android {
 tasks.withType(KotlinCompile).configureEach {
     kotlinOptions {
         jvmTarget = "1.8"
-        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn", "-Xallow-jvm-ir-dependencies"]
+        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
     }
 }
 
