Propagate parent CompositionReference in AndroidView
Have the AndroidView composable set the ViewTreeCompositionReference
such that [Abstract]ComposeViews attached as descendants become child
compositions of the composition responsible for the AndroidView
ancestor.

This affected layout direction propagation, especially around popups;
change layout direction propagation to be based on the resolved android
View layout direction.

Test: AndroidViewTest
Relnote: "ComposeViews placed in view hierarchies that are children of
another composition now host child compositions of their ancestors"

Change-Id: I92883a1532c4166de8d3551fc342b0533325375d

--- a/ui/ui/src/androidAndroidTest/AndroidManifest.xml
+++ b/ui/ui/src/androidAndroidTest/AndroidManifest.xml
@@ -15,7 +15,9 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="androidx.compose.ui">
-    <application>
+    <application
+        android:supportsRtl="true"
+        >
         <activity
             android:name="androidx.compose.ui.test.TestActivity"
             android:theme="@android:style/Theme.Material.NoActionBar.Fullscreen" />
